<resources>
    <string name="app_name">Artist Hunt</string>
    <string name="title_home">Home</string>
    <string name="title_addpost">Add Post</string>
    <string name="title_profile">Profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">SIGN UP</string>
    <string name="action_register_short">SIGN UP</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="action_already_account">I have an account</string>
    <string name="leunes_media">Leunes Media</string>
    <string name="artist_hunt">Artist Hunt</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="error_field_required">Required</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error">An error has occurred. Try Again</string>
    <string name="not_same_password">Passwords don\'t match</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_title">Title</string>
    <string name="prompt_description">Description</string>
    <string name="button_post">POST</string>
    <string name="info_favArtist">Favourite Artist</string>
    <string name="infoFavGenre">Genre</string>
    <string name="infoFavInstrument">Instrument</string>

</resources>
