<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".user.RegisterFragment">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:src="@drawable/loginbackground"
            android:id="@+id/imageView3" android:scaleType="centerCrop"
            android:adjustViewBounds="true"
            android:tint="#7d212121"
    />

    <!-- Login progress -->
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView android:layout_width="100dp"
                       android:layout_height="100dp"
                       android:src="@mipmap/ic_launcher_round" android:id="@+id/artisthuntlogo"
                       android:layout_marginTop="16dp"
                       app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                       android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                       android:layout_marginStart="8dp" android:scaleType="centerCrop" android:adjustViewBounds="true"
            />
            <TextView
                    android:text="@string/artist_hunt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:textSize="30sp" android:textAlignment="center"
                    android:textAllCaps="true" android:id="@+id/register_title"
                    android:layout_marginStart="32dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintTop_toBottomOf="@+id/artisthuntlogo"/>

            <EditText android:id="@+id/register_email"
                      android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:hint="@string/prompt_email"
                      android:inputType="textEmailAddress"
                      android:maxLines="1"
                      android:singleLine="true"
                      app:layout_constraintStart_toStartOf="parent"
                      app:layout_constraintEnd_toEndOf="parent"
                      app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="8dp" android:padding="20dp"
                      app:backgroundTint="@color/colorSecondary"
                      android:textColor="@color/colorPrimaryText"
                      android:backgroundTint="@color/colorSecondary"
                      android:textColorHint="@color/colorSecondary" android:layout_marginStart="32dp"
                      android:layout_marginEnd="32dp" app:layout_constraintTop_toBottomOf="@+id/register_title"
            />

            <EditText android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:hint="@string/prompt_firstname"
                      app:backgroundTint="@color/colorSecondary"
                      android:textColor="@color/colorPrimaryText"
                      android:backgroundTint="@color/colorSecondary"
                      android:textColorHint="@color/colorSecondary"
                      android:maxLines="1"
                      android:padding="20dp" android:inputType="textPersonName"
                      android:id="@+id/register_firstname" android:layout_marginEnd="32dp"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/register_email"/>
            <EditText android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:hint="@string/prompt_lastname"
                      app:backgroundTint="@color/colorSecondary"
                      android:textColor="@color/colorPrimaryText"
                      android:padding="20dp" android:textColorHint="@color/colorPrimaryText"
                      android:backgroundTint="@color/colorSecondary"
                      android:maxLines="1"
                      android:inputType="textPersonName"
                      android:id="@+id/register_lastname" android:layout_marginEnd="32dp"
                      app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="32dp"
                      app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                      app:layout_constraintTop_toBottomOf="@+id/register_firstname"/>
            <EditText
                    android:id="@+id/register_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:padding="20dp" android:backgroundTint="@color/colorSecondary"
                    app:backgroundTint="@color/colorSecondary"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondary" android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/register_lastname"/>

            <EditText
                    android:id="@+id/register_repeat_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_repeat_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_register_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/register_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:padding="20dp"
                    app:backgroundTint="@color/colorSecondary"
                    android:textColor="@color/colorPrimaryText"
                    android:textColorHint="@color/colorSecondary"
                    android:backgroundTint="@color/colorSecondary"
                    android:layout_marginStart="32dp" android:layout_marginEnd="32dp"/>

            <Button
                    android:id="@+id/btn_register"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_register"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="20dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/register_repeat_password"
                    android:layout_marginStart="32dp"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/btnBackToLogin"
                    app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toStartOf="@+id/Progress_register"/>

            <ProgressBar
                    android:id="@+id/Progress_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="32dp"
                    app:layout_constraintTop_toTopOf="@+id/btn_register"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_register"
            />
            <Button
                    android:text="@string/action_already_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:id="@+id/btnBackToLogin"
                    android:onClick="toLogin"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                    app:layout_constraintBottom_toTopOf="@+id/info_linearlayout" android:layout_marginStart="32dp"
                    android:layout_marginEnd="32dp" android:layout_marginBottom="32dp"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/info_linearlayout"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" android:layout_marginBottom="16dp">
                <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_logo_zonder_tekst"
                        android:id="@+id/imageView2"
                        android:tint="@color/colorSecondary"
                        android:adjustViewBounds="true"/>
                <TextView
                        android:text="@string/leunes_media"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryText" android:textAllCaps="true"/>
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>