<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".addpost.AddPostTextFragment" android:fillViewport="true">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:padding="20dp"
                android:id="@+id/addPostText_Title" android:layout_marginTop="32dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/prompt_title"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textAutoCorrect|textMultiLine|textImeMultiLine|textLongMessage"
                android:ems="10"
                android:padding="20dp"
                android:id="@+id/addPostText_description" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/addPostText_Title" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:hint="@string/prompt_description" android:maxLines="10"
                android:maxLength="500"/>
        <Button
                android:text="@string/button_post"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/addPostText_PostBtn"
                android:padding="20dp"
                style="@style/Widget.AppCompat.Button.Colored" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
        <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/addPostText_PostBtn"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:id="@+id/progressBar_AddPostText" android:visibility="invisible"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>